Fix win line on small displays

--- a/src/components/Totals/styles.scss
+++ b/src/components/Totals/styles.scss
@@ -75,7 +75,7 @@
   bottom: -0.5em;
   left: 0;
   margin: 0;
-  width: calc(100% - 2.25rem);
+  width: calc(100% - 2.25em);
   height: calc(100% + 1em);
 }
 
